--- a/docato/docato/templates/docato/project.html
+++ b/docato/docato/templates/docato/project.html
@@ -7,6 +7,7 @@
 {% block navbar %}
 	<li><a href="{% url 'projects' %}">{% trans 'Projects' %}</a></li>
 	<li class="active"><a href="javascript:void(0)">{{ project.name }}</a></li>
+	<li class="active"><a href="{% url 'export_project' project.id %}">{% trans 'Export Project' %}({{ project.name }})</a></li>
 {% endblock navbar %}
 
 {% block content %}
