--- a/docato/docato/templates/docato/subject.html
+++ b/docato/docato/templates/docato/subject.html
@@ -25,7 +25,8 @@
 			</div>
 			<div class="panel-body">
 				{% render_table table %}
-				<a href="javascript:void(0)" class=".ajax_link" id="delete_docs">{% trans 'Delete the selected documents' %}</a>
+				<a href="javascript:void(0)" class=".ajax_link" id="delete_docs">{% trans 'Delete the selected documents' %}</a>  &nbsp;&nbsp;
+                <a href="javascript:void(0)" class=".ajax_link" id="export_any">{% trans 'Export to JSON the selected docs' %}</a>
 			</div>
 		</div>
 	</div>
@@ -70,7 +71,10 @@
 			delete_url : "{% url 'delete_doc' subject.id %}",
 			get_row_link : function () {
 				return '{{ subject.id }}/document/' + $(this).find('.select input').attr('value');
-			}
+            },
+            // export
+            export_button : '#export_any',
+            export_url : "{% url 'export_any' %}?docs_items=",
 		});
 	});
 </script>
